
   * Fix exception importing with itrunk* layout.

   * Break subversion locks in ``bzr break-lock''.

   * Handle corner case following branch paths outside of prefixes in 
     revision metadata browser.

   * Handle strange corner case in HTTP, where get_dir() works on files and we 
     accidently start to call update() on files.

  PERFORMANCE

   * Significant speed improvements when no (old) tags have to be fetched. Requires 
     InterBranch.pull() patch.

   * The guessed layout is now only stored in the configuration and no longer 
     re-determined every time a repository is accessed.

  FEATURES

   * Now prints parent Subversion revision number after successful pull. (#332196)

bzr-svn 0.5.2					2009-02-18

  BUG FIXES

   * Fix installation of cache module.

bzr-svn 0.5.1					2009-02-17

  BUG FIXES

   * Fix parsing of "trunk/tags" style filenames in trunk repository layout 
     handling. (#324970)

   * "bzr push" now also works when creating new branches. "bzr svn-push" 
     has been removed. This requires a patched version of bzr. (#127945)

   * Fixed memory usage and performance bug while iterating over a repository.
     (#318993)

   * When following prefixes, cope with branches copied from outside of the 
     prefix. (#325428)

   * Handle non-mainline history a bit better in dpush. (#329284)

   * Assume that ERR_XML_MALFORMED only occurs for non-Subversion 
     URLs. (#327287)

   * Only upgrade tags for which the revision they point to has been 
     upgraded in svn-upgrade.

   * Fix handling of "unusual" branch paths in sparse logs. (#325727)

  FEATURES

   * Set svn:original-date property when revision properties can be committed.

   * Add transport speed progress indication. (require subvertpy >= 0.6.4)

  PERFORMANCE

   * New cache that stores the most important metadata information used 
     when browsing history. 

   * More efficient pull from Subversion branches, avoiding unnecessary 